# n8nMCP

./: .gitignore  @context.md  README.md  instructions.txt  transcript.md
GROK/: README.md
GROK/compound-ga/: research.md
GROK/groq-os-templates-live/: research.md
GROK/mcp-tutorials-api-cookbook/: research.md
GROK/python-sdk-v0.31.1/: research.md
GROK/remote-mcp-on-8-models/: research.md
mcp_n8n/: .env.example  README.md  pyproject.toml
mcp_n8n/scripts/: run_stdio_server.py
mcp_n8n/src/mcp_n8n/: __init__.py  __main__.py  client.py  config.py  schemas.py  server.py
